--- a/Runtime/AssemblyStateMachine.asmdef
+++ b/Runtime/AssemblyStateMachine.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "AssemblyStateMachine",
     "references": [
-        "GUID:1a4a9145c49172041a1a2c63e25939c7"
+        "GUID:1a4a9145c49172041a1a2c63e25939c7",
+        "GUID:e344a76f93630b247b9adfd51f24fe40"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
