Adding scrptable Type support

--- a/Runtime/AssemblyStateMachine.asmdef
+++ b/Runtime/AssemblyStateMachine.asmdef
@@ -2,7 +2,8 @@
     "name": "AssemblyStateMachine",
     "references": [
         "GUID:1a4a9145c49172041a1a2c63e25939c7",
-        "GUID:e344a76f93630b247b9adfd51f24fe40"
+        "GUID:e344a76f93630b247b9adfd51f24fe40",
+        "GUID:6023175abfeceb148a5a89293809e578"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
