--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "unity": "2019.1",
   "hideInEditor": true,
   "dependencies": {
-    "com.sas.tagsystem": "0.0.1",
-    "com.sas.servicelocator": "0.0.1"
+    "com.sas.utilities": "0.0.1"
   }
 }
