--- a/Runtime/AssemblyStateMachine.asmdef
+++ b/Runtime/AssemblyStateMachine.asmdef
@@ -2,7 +2,8 @@
     "name": "AssemblyStateMachine",
     "references": [
         "GUID:6023175abfeceb148a5a89293809e578",
-        "GUID:13cf59ac3f7b5964191f0da506f45fe2"
+        "GUID:13cf59ac3f7b5964191f0da506f45fe2",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
