Fixed editor NRE on deleting the  node

--- a/Runtime/AssemblyStateMachine.asmdef
+++ b/Runtime/AssemblyStateMachine.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "AssemblyStateMachine",
+    "rootNamespace": "",
     "references": [
         "GUID:6023175abfeceb148a5a89293809e578",
         "GUID:13cf59ac3f7b5964191f0da506f45fe2"
