Added SetState and condition bug fix

--- a/Editor/AssemblyStateMachineEditor.asmdef
+++ b/Editor/AssemblyStateMachineEditor.asmdef
@@ -9,16 +9,21 @@
     "includePlatforms": [],
     "excludePlatforms": [
         "Android",
+        "EmbeddedLinux",
+        "GameCoreScarlett",
+        "GameCoreXboxOne",
         "iOS",
         "LinuxStandalone64",
         "CloudRendering",
-        "Lumin",
         "macOSStandalone",
         "PS4",
+        "PS5",
+        "QNX",
         "Stadia",
         "Switch",
         "tvOS",
         "WSA",
+        "VisionOS",
         "WebGL",
         "WindowsStandalone32",
         "WindowsStandalone64",
